# DeveL

./: Cargo.toml  README.md
assets/configs/: clang_desc.txt  code_desc.txt  csharp_desc.txt  entries.json  gcc_desc.txt  idea_desc.txt  lua_desc.txt  nvim_desc.txt  pycharm_desc.txt  python_desc.txt  rust_desc.txt  swift_desc.txt  vim_desc.txt
src/: decorations.rs  entries.rs  main.rs
